fix: disable hover on mobile devices

--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -9,3 +9,9 @@
     @content;
   }
 }
+
+@mixin hover() {
+  @media (hover: hover), (-moz-touch-enabled: 0), (pointer: fine) {
+    @content;
+  }
+}
